deployments/apps/kubeseal-webgui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeseal-webgui
  namespace: kubeseal-webgui
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - "kubeseal.talos-cluster.local.obleey.com"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forward-auth
      backendRefs:
        - name: kubeseal-webgui
          port: 8080
